Project/Phase1/test_ex/test_2.spl
#include "tree.hpp"
#include "lex.yy.c"
#include <stdio.h>
#include "stdlib.h"
#include <string.h>

int main() {
    int num1 = 10;
    num2 = 20;
    int sum = num1 ? num2;

}